<resources>
    <string name="app_name">GastoViagem</string>
    <string name="dist_ncia">Distância</string>
    <string name="total_de_quil_metros">Total de quilômetros</string>
    <string name="preco">Preço</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">KMs por litro</string>
    <string name="total_gasto">Seu gasto total será de:</string>
    <string name="sinal_dinheiro">R$ 0</string>
    <string name="pre_o_por_litro">Preço por litro</string>
</resources>